<resources>
    <string name="app_name">FoodiePal</string>
    <string name="username">Username</string>
    <string name="pin">Pin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe">Recipe</string>
    <string name="meal_planer">Meal Planer</string>
    <string name="blog">Blog</string>
    <string name="chef_phone_number">+613-1234-12312</string>
    <string name="phone_number_title">Phnone:</string>
    <string name="email_title">Email:</string>
    <string name="chef_email">chef@gmail.com</string>
    <string name="ingredients">Ingredients:</string>
    <string name="instructions">Instructions:</string>
    <string name="recipe_title">Recipe title:</string>
    <string name="enter_ingredients">Enter ingredients</string>
    <string name="enter_instructions">Enter instructions</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="title">Title:</string>
    <string name="image_url">Image url:</string>
    <string name="enter_the_image_url">Enter the image url</string>
    <string name="content">Content:</string>
    <string name="enter_the_blog_content">Enter the blog content</string>
    <string name="profile_description_default">👋 Hi, I’m Proseth. I am an iOS Developer. \n🚀 I\'d like to try new things. \n📫 How to reach me ...</string>
    <string name="skill_default_text">Android | iOS | Flutter | Web</string>
    <string name="profile_image_url">Profile image Url:</string>
    <string name="enter_profile_image_url">Enter Profile image url</string>
    <string name="skill">Skill:</string>
    <string name="enter_skills">Enter skills</string>
    <string name="enter_profile_description">Enter Profile Description</string>
    <string name="profile_description">Profile description:</string>
</resources>