<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dashboard.pages.ContactMeFragment">



    <LinearLayout
        android:background="#FFEBEE"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/chef"/>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:paddingRight="15dp"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:text="@string/phone_number_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:paddingRight="15dp"
                        android:textSize="17sp"
                        android:text="@string/chef_phone_number"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/phone_call_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/phone_call"/>
                </LinearLayout>

                <LinearLayout
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:paddingRight="15dp"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:text="@string/email_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:paddingRight="15dp"
                        android:textSize="17sp"
                        android:text="@string/chef_email"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/email_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/email"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>